@@ -16,6 +16,7 @@ LoadSymbolsForAllAction.Load_symbols_for_all_shared_libraries_1=Load symbols for
 LoadSymbolsForAllActionDelegate.Error(s)_occurred_loading_the_symbols_1=Error(s) occurred loading the symbols.
 LoadSymbolsForAllAction.Load_Symbols_For_All_2=Load Symbols For All
 LoadSymbolsForAllActionDelegate.Error_1=Error
+LoadSymbolsForAllActionDelegate.0=Operation failed.
 LoadSymbolsForAllAction.Unable_to_load_symbols_1=Unable to load symbols.
 SignalZeroWorkbenchActionDelegate.0=Exceptions occurred attempting to resume without signal.
 SignalZeroWorkbenchActionDelegate.1=Resume without signal failed.
